Added tabbed window, some changes in pom.xml